# ebay-auto-seller

./: .gitignore  README.md  package.json
services/api/: README.md  lambda_handler.py  pyproject.toml  requirements-dev.txt  requirements-lambda.txt
services/api/app/: main.py
services/api/app/domain/: __init__.py  pricing.py
services/api/app/routes/: research.py
services/api/tests/: conftest.py  test_ebay_auth_router.py  test_ebay_oauth_service.py  test_health.py  test_health_unit.py  test_lambda_handler.py  test_research_candidates.py
workers/: README.md  pyproject.toml  requirements-dev.txt
workers/common/: __init__.py  db.py  ebay_oauth.py
workers/inventory_sync_ebay/: handler.py  inventory_api.py  logic.py  repository.py  service.py
workers/market_stats_refresh/: handler.py  logic.py  service.py
workers/orders_sync/: fulfillment_client.py  fulfillment_map.py  handler.py  logic.py  repository.py  service.py
workers/repricing/: handler.py  logic.py  repository.py  service.py
workers/sourcing_scan/: handler.py  logic.py  repository.py  service.py
workers/sourcing_scan/adapters/: __init__.py  base.py  custom.py  http_json.py  marketplace_fetchers.py  marketplace_resolve.py  registry.py  url_signing.py
workers/tests/: conftest.py  test_inventory_sync_logic.py  test_market_stats_logic.py  test_marketplace_resolve.py  test_orders_sync_fulfillment.py  test_orders_sync_logic.py  test_repricing_logic.py  test_sourcing_http_extra_headers.py  test_sourcing_http_json_logic.py  test_sourcing_scan_logic.py  test_sourcing_url_signing.py  test_worker_stubs.py
(+32 files in other folders)
