[project]
name = "ebay-auto-seller-api"
version = "0.1.0"
description = "Backend API for eBay US-to-US inventory and sales automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "mangum",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
  "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

